Added RGB gradient control, power; fixed bugs
